--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -104,13 +104,31 @@
                                      <div class="uk-width-1-1@s">
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.email']}:</span> #{alumnoControlador.alumnoModelo.correoPadreFamilia}</p>
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.nivel']}:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p>
-                                         <h:outputText styleClass="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small" rendered="${alumnoControlador.detalleAlumno2ModeloLista.size() eq 1}" value="ciclo escolar: ${alumnoControlador.detalleAlumno2ModeloLista.get(0).descripcion}"/>
-                                         <h:selectOneMenu rendered="${alumnoControlador.detalleAlumno2ModeloLista.size() gt 1}">
-                                             <f:selectItems value="${alumnoControlador.detalleAlumno2ModeloLista}"
-                                                            var="detalleAlumno2Modelo"
-                                                            itemValue="${detalleAlumno2Modelo.idGrupo}"
-                                                            itemLabel="${detalleAlumno2Modelo.grado} ${detalleAlumno2Modelo.grupo}"/>
-                                         </h:selectOneMenu>
+                                         <c:choose>
+                                             <c:when test="${alumnoControlador.detalleAlumno2ModeloLista.size() gt 1}">
+                                                 <h:form id="formulario-grupo">
+                                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small ">
+                                                         <span class="uk-text-bold uk-text-capitalize">ciclo escolar:</span>
+                                                         <h:outputText id="ciclo-escolar" value="${alumnoControlador.detalleAlumno2Modelo.descripcion}"/>
+                                                     </p>
+                                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small">
+                                                         <span class="uk-text-bold uk-text-capitalize">grupo:</span>
+                                                         <h:selectOneMenu id="seleccion-grupo" value="#{alumnoControlador.idGrupoSeleccionado}">
+                                                             <f:selectItems value="${alumnoControlador.detalleAlumno2ModeloLista}"
+                                                                            var="detalleAlumno2Modelo"
+                                                                            itemValue="${detalleAlumno2Modelo.idGrupo}"
+                                                                            itemLabel="${detalleAlumno2Modelo.grado} ${detalleAlumno2Modelo.grupo}"/>
+                                                             <f:ajax execute="seleccion-grupo" listener="#{alumnoControlador.buscaEscuela()}" render="ciclo-escolar"/>
+                                                         </h:selectOneMenu>
+                                                     </p>
+                                                 </h:form>
+                                             </c:when>
+                                             <c:otherwise>
+                                                 <h:outputText styleClass="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small"
+                                                               value="${alumnoControlador.detalleAlumno2Modelo.descripcion}"/>
+                                                 <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small"><span class="uk-text-bold uk-text-capitalize">${alumnoControlador.detalleAlumno2Modelo.grado} ${alumnoControlador.detalleAlumno2Modelo.grupo}</span></p>
+                                             </c:otherwise>
+                                         </c:choose>
                                      </div>
                                  </h:panelGroup>
                              </div>
