--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -219,6 +219,7 @@
                                                         <h:outputText pt:uk-icon="icon: users" styleClass="uk-margin-small-right uk-icon"/>
                                                         <span class="uk-text-middle"><h:outputText value="alumnos" styleClass="primera-mayuscula uk-display-inline-block"/></span>
                                                         <f:param name="escuela" value="#{escuela.claveCentroTrabajo}"/>
+                                                        <f:param name="nombre" value="#{escuela.nombre}"/>
                                                     </h:link>
                                                 </li>
                                                 <li class="uk-nav-divider"/>
